validador talleres de alimentacion

--- a/SASS/components/_sobre-mi.scss
+++ b/SASS/components/_sobre-mi.scss
@@ -1,11 +1,11 @@
 /*CSS PAGINA SOBRE MI*/
 
 .titPagSobreMi {
-    margin-top: 5rem;
+    margin-top: 6rem;
 }
 
 .porQueNutricion {
-    margin-top: $margin-top;
+    margin-top: 1rem;
 }
 
 .sobreMi1 {
@@ -34,5 +34,12 @@
 }
 .fotoCemic, .garrahan {
     width: 37rem;
+}
+
+.fotoCemic {
+    margin-top: 2rem;
+}
+
+.garrahan {
     margin-bottom: 2rem;
 }
