Cambio en el footer. Agregue mi link a github

--- a/SASS/components/_generales-todas-las-paginas.scss
+++ b/SASS/components/_generales-todas-las-paginas.scss
@@ -77,3 +77,14 @@ header {
 .botonModalWhatsapp {
     width: 7rem;
 }
+
+.subrayadoFooter {
+    text-decoration: none;
+    color:#fff1e6;
+    text-decoration: underline;
+}
+
+.subrayadoFooter:hover {
+    color:#fff1e6;
+    text-decoration: underline;
+}
