--- a/SASS/main.css
+++ b/SASS/main.css
@@ -121,6 +121,17 @@ main {
   width: 7rem;
 }
 
+.subrayadoFooter {
+  text-decoration: none;
+  color: #fff1e6;
+  text-decoration: underline;
+}
+
+.subrayadoFooter:hover {
+  color: #fff1e6;
+  text-decoration: underline;
+}
+
 /*CSS DEL INDEX DE LA PAGINA*/
 /* Titulo principal con imagen de fondo*/
 .seccionCarrusel {
